--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@langchain/mongodb": "^0.1.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "langchain": "^0.3.30",
     "mongodb": "^6.18.0",
     "zod": "^3.25.76"
   }
