Simple useless Frontend

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.3.0",
     "ts-node": "^10.9.2",
@@ -23,6 +24,7 @@
     "@langchain/langgraph": "^0.4.5",
     "@langchain/langgraph-checkpoint-mongodb": "^0.1.0",
     "@langchain/mongodb": "^0.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "langchain": "^0.3.30",
